--- a/src/main/resources/assets/tfc/lang/zh_cn.lang
+++ b/src/main/resources/assets/tfc/lang/zh_cn.lang
@@ -4755,7 +4755,7 @@ advancements.tfc.world.wolf_familiarity.title=最好的朋友
 advancements.tfc.world.wolf_familiarity.description=和一只狼的亲密度达到最大值。
 advancements.tfc.world.make_spindle.title=理顺毛线
 advancements.tfc.world.make_spindle.description=制作一个纺锤以把羊毛变成羊毛纱。
-advancements.tfc.world.make_loom.title=扎扎弄机杼
+advancements.tfc.world.make_loom.title=札札弄机杼
 advancements.tfc.world.make_loom.description=制作一台织布机，并用它把线织成布。
 advancements.tfc.world.make_bed.title=祝你好梦
 advancements.tfc.world.make_bed.description=用羊毛布或丝绸制作床。
